test-cases/valid/accept/call_void_function.ul
void main() {
    foo();
}

void foo() {
    // Nothing to do here.
}
