test-cases/invalid/array_type_bracket_mismatch.ul
// Similar to some of the other cases, antlr reports an
// error here, but compilation doesn't fail.
void foo() {
    float[1 floats;
}